[gd_scene load_steps=35 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://Trash.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/background07.png" type="Texture" id=5]
[ext_resource path="res://sprites/background06.png" type="Texture" id=6]
[ext_resource path="res://sprites/background01.png" type="Texture" id=7]
[ext_resource path="res://sprites/background02.png" type="Texture" id=8]
[ext_resource path="res://sprites/background03.png" type="Texture" id=9]
[ext_resource path="res://sprites/background00.png" type="Texture" id=10]
[ext_resource path="res://sprites/background04.png" type="Texture" id=11]
[ext_resource path="res://sprites/background05.png" type="Texture" id=12]
[ext_resource path="res://sprites/background17.png" type="Texture" id=13]
[ext_resource path="res://sprites/background08.png" type="Texture" id=14]
[ext_resource path="res://sprites/background11.png" type="Texture" id=15]
[ext_resource path="res://sprites/background20.png" type="Texture" id=16]
[ext_resource path="res://sprites/background15.png" type="Texture" id=17]
[ext_resource path="res://sprites/background21.png" type="Texture" id=18]
[ext_resource path="res://sprites/background18.png" type="Texture" id=19]
[ext_resource path="res://sprites/background22.png" type="Texture" id=20]
[ext_resource path="res://sprites/background13.png" type="Texture" id=21]
[ext_resource path="res://sprites/background19.png" type="Texture" id=22]
[ext_resource path="res://sprites/background12.png" type="Texture" id=23]
[ext_resource path="res://sprites/background23.png" type="Texture" id=24]
[ext_resource path="res://sprites/background14.png" type="Texture" id=25]
[ext_resource path="res://sprites/background16.png" type="Texture" id=26]
[ext_resource path="res://sprites/background24.png" type="Texture" id=27]
[ext_resource path="res://sprites/background09.png" type="Texture" id=28]
[ext_resource path="res://sprites/background10.png" type="Texture" id=29]
[ext_resource path="res://sounds/yucks.wav" type="AudioStream" id=30]
[ext_resource path="res://sounds/tristan_lohengrin_happy.ogg" type="AudioStream" id=31]
[ext_resource path="res://sounds/buttonpresed.wav" type="AudioStream" id=32]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 25
frame_0/texture = ExtResource( 10 )
frame_1/texture = ExtResource( 7 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 8 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 9 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 11 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 12 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 6 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 5 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 14 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 28 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 29 )
frame_10/delay_sec = 0.0
frame_11/texture = ExtResource( 15 )
frame_11/delay_sec = 0.0
frame_12/texture = ExtResource( 23 )
frame_12/delay_sec = 0.0
frame_13/texture = ExtResource( 21 )
frame_13/delay_sec = 0.0
frame_14/texture = ExtResource( 25 )
frame_14/delay_sec = 0.0
frame_15/texture = ExtResource( 17 )
frame_15/delay_sec = 0.0
frame_16/texture = ExtResource( 26 )
frame_16/delay_sec = 0.0
frame_17/texture = ExtResource( 13 )
frame_17/delay_sec = 0.0
frame_18/texture = ExtResource( 19 )
frame_18/delay_sec = 0.0
frame_19/texture = ExtResource( 22 )
frame_19/delay_sec = 0.0
frame_20/texture = ExtResource( 16 )
frame_20/delay_sec = 0.0
frame_21/texture = ExtResource( 18 )
frame_21/delay_sec = 0.0
frame_22/texture = ExtResource( 20 )
frame_22/delay_sec = 0.0
frame_23/texture = ExtResource( 24 )
frame_23/delay_sec = 0.0
frame_24/texture = ExtResource( 27 )
frame_24/delay_sec = 0.0

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1027.85, -0.293427, 0, 0, 0, 0, 1030.37, 591.87 )
}

[node name="World" type="Node"]
script = ExtResource( 2 )
Trash = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1035.0
margin_bottom = 609.0
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="TrashTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 174.614, 295.257 )

[node name="TrashPath" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="TrashPathFollow2D" type="PathFollow2D" parent="TrashPath"]
position = Vector2( 1027.85, -0.293427 )
rotation = 1.56659

[node name="Interface" parent="." instance=ExtResource( 4 )]

[node name="game_over_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 30 )

[node name="background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 31 )

[node name="press_button" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 32 )
volume_db = 20.0
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="TrashTimer" to="." method="_on_TrashTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="Interface" to="." method="new_game"]
